divisions not rendering

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-HELP.md
+#########BACKEND IGNORE############
+
 .gradle
-/build/
+build/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -17,17 +18,46 @@ HELP.md
 *.iws
 *.iml
 *.ipr
-/out/
+out/
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
 ### VS Code ###
 .vscode/
 
-/bin/
-/node_modules/
+
+#######FRONTEND IGNORE##########
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+Collapse
+
+
+
+
